fix for layout issue in cart page

--- a/client/styles/partials/base/_reset.scss
+++ b/client/styles/partials/base/_reset.scss
@@ -28,4 +28,5 @@ body {
   background-color: var(--bg-color);
   color: var(--text-color);
   overflow-x: hidden;
+  max-width: 100vw;
 }
