--- a/client/styles/partials/components/cart/_cartpage.scss
+++ b/client/styles/partials/components/cart/_cartpage.scss
@@ -2,16 +2,21 @@
   background-color: #f4f3ef;
   width: 100vw;
   height: 100vh;
+  max-width: 100vw;
   position: absolute;
   top: 0;
-  right: 0;
+  right: -100vw;
   z-index: 20;
-  transform: translateX(100vw);
-  transition: transform 0.5s ease;
+  transition: all 0.5s ease;
   font-size: small;
+  overflow: hidden;
+
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 
   &.open {
-    transform: translateX(0);
+    right: 0;
   }
 
   @include tabletS {
@@ -21,10 +26,12 @@
   }
 
   .head {
+    width: 100%;
+    height: 8vh;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px;
+    padding: 20px;
 
     button {
       background-color: transparent;
@@ -48,6 +55,7 @@
         color: #ddd;
       }
     }
+
     .close-cart {
       @include tabletS {
         font-size: 20px;
@@ -61,21 +69,33 @@
   }
 
   .cart-section {
-    padding: 10px;
-    @include flex-center-column;
     width: 100%;
+    height: 77vh;
+
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
     gap: 10px;
+    width: 100%;
+    max-height: 80vh;
+    gap: 10px;
+    overflow-y: auto;
   }
 
   .total-section {
-    position: fixed;
-    bottom: 0;
-    padding: 10px;
+    width: 100%;
+    height: 15vh;
+
+    padding: 10px 20px 10px 10px;
     background-color: #fff;
     box-shadow: 0 -5px 12px #00000026;
     width: 100%;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
+
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 
     .amount {
       display: flex;
